# EgocentricReconstruction

./: LICENSE.txt  README.md  environment.yml  main.py  setup.sh
cuda/: cuda_functions.cu
delta/dmc/: CMakeLists.txt
delta/dmc/include/dmc/: dmc.hpp  ioctree.hpp  ioctree_node.hpp  marching_cubes.hpp  math_util.hpp  tree.hpp  tree_config.hpp  update_tree.h  vertex.hpp  video_util.hpp
delta/dmc/src/: main.cpp  tree_update.cu
delta/raft/core/: corr.py  extractor.py  raft.py
delta/raft/core/utils/: utils.py
demo/config/: demo.json
demo/input_video/sponza/: config.yaml  traj.csv  traj_extrapolation.csv  traj_interpolation.csv
slam/: CMakeLists.txt  video_pose_main.cc
texture_mapping/: cube_tiler.py  equirect_depth_renderer.py  equirect_texture_sampler.py  equitriangle_tiler.py  texture_main.py  texture_main_single_texture_map.py  texture_utils.py  viewer.py
texture_mapping/texture_opengl/: framework.py  perspective_depthmap.vert  perspective_rasterize.vert  planar_rasterize.vert  texture_colors.frag
texture_mapping/texture_opengl/arcball/: ArcBall.py  Lesson48.py  NeHeGL.py  __init__.py
utils/: __init__.py  cuda_util.py  depth_util.py  dmc_util.py  rendering_trajectory.py  slam_util.py  texture_util.py  video_util.py  weight_util.py
